--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,10 @@
 html, body {
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
 canvas {
+  height: 100wh;
+  width: 100vw;
   display: block;
 }
